@@ -10,6 +10,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import cn.hutool.core.text.CharSequenceUtil;
 import io.github.seenings.busi.controller.BusiController;
 import io.github.seenings.busi.model.Busi;
 import io.github.seenings.coin.constant.CoinConstant;
@@ -141,11 +142,16 @@ public class SelfInfoController {
             //学校找所在地，所在地确认是省还是城市，如果是省直接取省份的标识符
             //如果是城市，找到代码后，再在关联渠道省份
             String location = httpSchoolService.schoolCodeToLocation(Collections.singleton(schoolId)).get(schoolId);
+            if (CharSequenceUtil.isEmpty(location)) {
+                highestSchoolId = null;
+            } else {
 
-            String provinceCode = httpProvinceService.locationToProvinceCode(Set.of(location)).get(location);
-            Integer provinceId = httpProvinceService.provinceCodeToProvinceId(Collections.singleton(provinceCode)).get(provinceCode);
-            highestSchoolId = cn.hutool.core.collection.CollUtil.newArrayList(NumberUtils.intToString(provinceId)
-                    , schoolId);
+                String provinceCode = httpProvinceService.locationToProvinceCode(Set.of(location)).get(location);
+                Integer provinceId = httpProvinceService.provinceCodeToProvinceId(Collections.singleton(provinceCode)).get(provinceCode);
+                highestSchoolId = cn.hutool.core.collection.CollUtil.newArrayList(NumberUtils.intToString(provinceId)
+                        , schoolId);
+            }
+
         }
         Integer workPositionId = httpUserWorkPositionService.userIdToPosition(Collections.singleton(userId)).get(userId);
         String workCompany = httpUserWorkService.userIdToCompanyName(Collections.singleton(userId)).get(userId);
